SELinux is not supported on Ubuntu, or Debian anymore

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,19 @@
 ---
-- name: SELinux | Include distribution variables
-  include_vars: "{{ ansible_os_family  }}.yml"
 
-- name: SELinux | Execute Changes
-  include: "{{ ansible_os_family  }}.yml"
+- name: SELinux | RedHat | Install libselinux-python
+  yum: name=libselinux-python state=present
+
+- name: SELinux | Set SELinux policy and state
+  selinux: policy={{ selinux_policy }} state={{ selinux_state }}
+  register: selinux
+
+- block:
+  - name: SELinux | Restart machine
+    shell: sleep 2 && shutdown -r now "Restarting with SELinux Disabled"
+    async: 1
+    poll: 0
+    ignore_errors: true
+  - name: SELinux | Wait for the server to come back
+    become: false
+    local_action: wait_for host={{ ansible_ssh_host | default(inventory_hostname) }} search_regex=OpenSSH state=started delay=10 timeout=300
+  when: selinux.changed and reboot
