--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -15,5 +15,10 @@
     ignore_errors: true
   - name: SELinux | Wait for the server to come back
     become: false
-    local_action: wait_for host={{ ansible_ssh_host | default(inventory_hostname) }} port={{ ansible_ssh_port }} state=started delay=15 timeout=300
-  when: selinux.changed and reboot
+    local_action:
+      module: wait_for
+        host="{{ ansible_ssh_host | default(inventory_hostname) }}"
+        port=22
+        delay=30
+        timeout=300
+    when: selinux.changed and reboot
