--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -18,7 +18,7 @@
     local_action:
       module: wait_for
         host="{{ ansible_ssh_host | default(inventory_hostname) }}"
-        port=22
+        port="{{ ansible_ssh_port | default('22') }}"
         delay=30
         timeout=300
     when: selinux.changed and reboot
