--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -10,18 +10,17 @@
 - debug: var=selinux
 
 - block:
-  - name: SELinux | Restart machine
-    shell: sleep 2 && shutdown -r now "Restarting with SELinux Disabled"
-    async: 1
-    poll: 0
-    ignore_errors: true
-  - name: SELinux | Wait for the server to come back
-    become: false
-    local_action:
-      module: wait_for
-        host="{{ ansible_host | default(inventory_hostname) }}"
-        port="{{ ansible_port | default('22') }}"
-        search_regex=".*OpenSSH*"
-        delay=10
-        timeout=300
+    - name: SELinux | Restart machine
+      shell: sleep 2 && shutdown -r now "Restarting with SELinux Disabled"
+      async: 1
+      poll: 0
+      ignore_errors: true
+    - name: SELinux | Wait for the server to come back
+      become: false
+      delegate_to: localhost
+      wait_for:
+        port: "{{ ssh_port }}"
+        host: "{{ item.address }}"
+        search_regex: SSH
+        delay: 10
   when: selinux.changed and reboot
