--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,6 +2,10 @@
 
 - name: SELinux | RedHat | Install libselinux-python
   yum: name=libselinux-python state=present
+  register: task_result
+  until: task_result is success
+  retries: 10
+  delay: 2
 
 - name: SELinux | Set SELinux policy and state
   selinux: policy={{ selinux_policy }} state={{ selinux_state }}
